RESOLVED FIXED298454
[iOS] fast/forms/ios/remove-view-after-focus.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=298454
Summary [iOS] fast/forms/ios/remove-view-after-focus.html is a constant crash
Aditya Keerthi
Reported 2025-09-05 10:17:07 PDT
Attachments
Aditya Keerthi
Comment 1 2025-09-05 10:45:44 PDT
EWS
Comment 2 2025-09-05 17:17:42 PDT
Committed 299654@main (f8c1b2ca2c26): <https://commits.webkit.org/299654@main> Reviewed commits have been landed. Closing PR #50373 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.